feat(rag): 添加RAG故事管理系统和向量数据库支持
- 实现RAGStoryManager管理剧情节点和角色设定
- 集成Milvus向量数据库服务进行语义匹配
- 配置Spring AI集成OpenAI API进行对话生成
- 添加完整的应用配置文件application.yml
- 集成必要的依赖包包括向量数据库和AI服务