@@ -1,17 +1,19 @@
 package com.npcagent.service;
 
 import com.npcagent.config.MilvusConfig;
-import io.milvus.v2.client.MilvusServiceClient;
-import io.milvus.v2.client.ConnectParam;
-import io.milvus.v2.common.DataType;
-import io.milvus.v2.common.IndexParam;
-import io.milvus.v2.service.collection.request.CreateCollectionReq;
-import io.milvus.v2.service.collection.request.HasCollectionReq;
-import io.milvus.v2.service.collection.request.DropCollectionReq;
-import io.milvus.v2.service.vector.request.InsertReq;
-import io.milvus.v2.service.vector.request.SearchReq;
-import io.milvus.v2.service.vector.request.data.FloatVec;
-import io.milvus.v2.service.vector.response.SearchResp;
+import io.milvus.client.MilvusClient;
+import io.milvus.client.MilvusServiceClient;
+import io.milvus.grpc.SearchResults;
+import io.milvus.param.ConnectParam;
+import io.milvus.param.IndexType;
+import io.milvus.param.MetricType;
+import io.milvus.param.R;
+import io.milvus.param.RpcStatus;
+import io.milvus.param.collection.*;
+import io.milvus.param.dml.InsertParam;
+import io.milvus.param.dml.SearchParam;
+import io.milvus.param.index.CreateIndexParam;
+import io.milvus.response.SearchResultsWrapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
@@ -34,7 +36,7 @@ import java.util.Map;
  * 4. 执行向量相似度搜索
  *
  * 实现说明：
- * - 使用Milvus Java SDK进行向量操作
+ * - 使用Milvus Java SDK v1 API进行向量操作
  * - 支持自动创建集合和索引
  * - 提供向量CRUD操作
  */
@@ -44,7 +46,7 @@ public class MilvusService {
     private static final Logger logger = LoggerFactory.getLogger(MilvusService.class);
 
     private final MilvusConfig milvusConfig;
-    private MilvusServiceClient milvusClient;
+    private MilvusClient milvusClient;
 
     private static final String FIELD_ID = "id";
     private static final String FIELD_VECTOR = "vector";
@@ -79,10 +81,10 @@ public class MilvusService {
     }
 
     private void connect() {
-        ConnectParam connectParam = ConnectParam.builder()
-                .host(milvusConfig.getHost())
-                .port(milvusConfig.getPort())
-                .databaseName(milvusConfig.getDatabase())
+        ConnectParam connectParam = ConnectParam.newBuilder()
+                .withHost(milvusConfig.getHost())
+                .withPort(milvusConfig.getPort())
+                .withDatabaseName(milvusConfig.getDatabase())
                 .build();
 
         milvusClient = new MilvusServiceClient(connectParam);
@@ -92,61 +94,71 @@ public class MilvusService {
     private void createCollectionIfNotExists() {
         String collectionName = milvusConfig.getCollectionName();
 
-        HasCollectionReq hasCollectionReq = HasCollectionReq.builder()
-                .collectionName(collectionName)
+        HasCollectionParam hasCollectionParam = HasCollectionParam.newBuilder()
+                .withCollectionName(collectionName)
                 .build();
 
-        Boolean hasCollection = milvusClient.hasCollection(hasCollectionReq);
+        R<Boolean> hasCollectionResponse = milvusClient.hasCollection(hasCollectionParam);
 
-        if (!hasCollection) {
-            CreateCollectionReq.FieldSchema idField = CreateCollectionReq.FieldSchema.builder()
-                    .name(FIELD_ID)
-                    .dataType(DataType.Int64)
-                    .isPrimaryKey(true)
-                    .autoID(true)
+        if (hasCollectionResponse.getData() == null || !hasCollectionResponse.getData()) {
+            List<FieldType> fields = new ArrayList<>();
+
+            FieldType nodeIdField = FieldType.newBuilder()
+                    .withName(FIELD_NODE_ID)
+                    .withDataType(io.milvus.grpc.DataType.VarChar)
+                    .withMaxLength(256)
                     .build();
 
-            CreateCollectionReq.FieldSchema nodeIdField = CreateCollectionReq.FieldSchema.builder()
-                    .name(FIELD_NODE_ID)
-                    .dataType(DataType.VarChar)
-                    .maxLength(256)
+            FieldType contentField = FieldType.newBuilder()
+                    .withName(FIELD_CONTENT)
+                    .withDataType(io.milvus.grpc.DataType.VarChar)
+                    .withMaxLength(1024)
                     .build();
 
-            CreateCollectionReq.FieldSchema contentField = CreateCollectionReq.FieldSchema.builder()
-                    .name(FIELD_CONTENT)
-                    .dataType(DataType.VarChar)
-                    .maxLength(1024)
+            FieldType vectorField = FieldType.newBuilder()
+                    .withName(FIELD_VECTOR)
+                    .withDataType(io.milvus.grpc.DataType.FloatVector)
+                    .withDimension(milvusConfig.getEmbeddingDimension())
                     .build();
 
-            CreateCollectionReq.FieldSchema vectorField = CreateCollectionReq.FieldSchema.builder()
-                    .name(FIELD_VECTOR)
-                    .dataType(DataType.FloatVector)
-                    .dimension(milvusConfig.getEmbeddingDimension())
+            fields.add(nodeIdField);
+            fields.add(contentField);
+            fields.add(vectorField);
+
+            CreateCollectionParam createCollectionParam = CreateCollectionParam.newBuilder()
+                    .withCollectionName(collectionName)
+                    .withDescription("NPC Agent vector storage")
+                    .withFieldTypes(fields)
                     .build();
 
-            CreateCollectionReq createCollectionReq = CreateCollectionReq.builder()
-                    .collectionName(collectionName)
-                    .description("NPC Agent vector storage")
-                    .fieldSchemaList(List.of(idField, nodeIdField, contentField, vectorField))
+            R<RpcStatus> createResponse = milvusClient.createCollection(createCollectionParam);
+            if (createResponse.getStatus() != R.Status.Success.getCode()) {
+                logger.error("Failed to create collection: {}", createResponse.getMessage());
+                return;
+            }
+
+            CreateIndexParam indexParam = CreateIndexParam.newBuilder()
+                    .withCollectionName(collectionName)
+                    .withFieldName(FIELD_VECTOR)
+                    .withIndexType(IndexType.IVF_FLAT)
+                    .withMetricType(MetricType.COSINE)
+                    .withExtraParam("{\"nlist\":1024}")
                     .build();
 
-            milvusClient.createCollection(createCollectionReq);
+            R<RpcStatus> indexResponse = milvusClient.createIndex(indexParam);
+            if (indexResponse.getStatus() != R.Status.Success.getCode()) {
+                logger.error("Failed to create index: {}", indexResponse.getMessage());
+                return;
+            }
 
-            IndexParam indexParam = IndexParam.builder()
-                    .fieldName(FIELD_VECTOR)
-                    .indexType(IndexParam.IndexType.IVF_FLAT)
-                    .metricType(IndexParam.MetricType.COSINE)
-                    .extraParams(Map.of("nlist", 1024))
-                    .build();
-
-            milvusClient.createIndex(IndexParam.builder()
-                    .collectionName(collectionName)
-                    .indexParams(List.of(indexParam))
+            R<RpcStatus> loadResponse = milvusClient.loadCollection(LoadCollectionParam.newBuilder()
+                    .withCollectionName(collectionName)
                     .build());
 
-            milvusClient.loadCollection(io.milvus.v2.service.collection.request.LoadCollectionReq.builder()
-                    .collectionName(collectionName)
-                    .build());
+            if (loadResponse.getStatus() != R.Status.Success.getCode()) {
+                logger.error("Failed to load collection: {}", loadResponse.getMessage());
+                return;
+            }
 
             logger.info("Created collection: {}", collectionName);
         } else {
@@ -156,18 +168,22 @@ public class MilvusService {
 
     public void insertVector(String nodeId, String content, List<Float> vector) {
         try {
-            Map<String, Object> data = new HashMap<>();
-            data.put(FIELD_NODE_ID, nodeId);
-            data.put(FIELD_CONTENT, content);
-            data.put(FIELD_VECTOR, vector);
+            List<InsertParam.Field> fields = new ArrayList<>();
+            fields.add(new InsertParam.Field(FIELD_NODE_ID, Collections.singletonList(nodeId)));
+            fields.add(new InsertParam.Field(FIELD_CONTENT, Collections.singletonList(content)));
+            fields.add(new InsertParam.Field(FIELD_VECTOR, Collections.singletonList(vector)));
 
-            InsertReq insertReq = InsertReq.builder()
-                    .collectionName(milvusConfig.getCollectionName())
-                    .data(List.of(data))
+            InsertParam insertParam = InsertParam.newBuilder()
+                    .withCollectionName(milvusConfig.getCollectionName())
+                    .withFields(fields)
                     .build();
 
-            milvusClient.insert(insertReq);
-            logger.debug("Inserted vector for node: {}", nodeId);
+            R<io.milvus.grpc.MutationResult> insertResponse = milvusClient.insert(insertParam);
+            if (insertResponse.getStatus() == R.Status.Success.getCode()) {
+                logger.debug("Inserted vector for node: {}", nodeId);
+            } else {
+                logger.error("Failed to insert vector: {}", insertResponse.getMessage());
+            }
         } catch (Exception e) {
             logger.error("Failed to insert vector: {}", e.getMessage());
         }
@@ -175,32 +191,39 @@ public class MilvusService {
 
     public List<Map<String, Object>> searchSimilarVectors(List<Float> queryVector, int topK) {
         try {
-            FloatVec queryData = new FloatVec(queryVector);
+            List<List<Float>> vectors = new ArrayList<>();
+            vectors.add(queryVector);
 
-            SearchReq searchReq = SearchReq.builder()
-                    .collectionName(milvusConfig.getCollectionName())
-                    .data(Collections.singletonList(queryData))
-                    .annsField(FIELD_VECTOR)
-                    .topK(topK)
-                    .metricType(IndexParam.MetricType.COSINE)
+            SearchParam searchParam = SearchParam.newBuilder()
+                    .withCollectionName(milvusConfig.getCollectionName())
+                    .withMetricType(MetricType.COSINE)
+                    .withTopK(topK)
+                    .withVectors(vectors)
+                    .withVectorFieldName(FIELD_VECTOR)
+                    .withOutFields(List.of(FIELD_NODE_ID, FIELD_CONTENT))
                     .build();
 
-            SearchResp searchResp = milvusClient.search(searchReq);
-
-            List<Map<String, Object>> results = new ArrayList<>();
-            for (List<SearchResp.SearchResult> searchResults : searchResp.getSearchResults()) {
-                for (SearchResp.SearchResult result : searchResults) {
-                    Map<String, Object> resultMap = new HashMap<>();
-                    resultMap.put("id", result.getId());
-                    resultMap.put("score", result.getScore());
-                    resultMap.put("nodeId", result.getEntity().get(FIELD_NODE_ID));
-                    resultMap.put("content", result.getEntity().get(FIELD_CONTENT));
-                    results.add(resultMap);
-                }
+            R<SearchResults> searchResponse = milvusClient.search(searchParam);
+            if (searchResponse.getStatus() != R.Status.Success.getCode()) {
+                logger.error("Failed to search vectors: {}", searchResponse.getMessage());
+                return Collections.emptyList();
             }
 
-            logger.debug("Found {} similar vectors", results.size());
-            return results;
+            SearchResultsWrapper wrapper = new SearchResultsWrapper(searchResponse.getData().getResults());
+            List<SearchResultsWrapper.IDScore> results = wrapper.getIDScore(0);
+
+            List<Map<String, Object>> searchResults = new ArrayList<>();
+            for (SearchResultsWrapper.IDScore result : results) {
+                Map<String, Object> resultMap = new HashMap<>();
+                resultMap.put("id", result.getLongID());
+                resultMap.put("score", result.getScore());
+                resultMap.put("nodeId", result.get(FIELD_NODE_ID));
+                resultMap.put("content", result.get(FIELD_CONTENT));
+                searchResults.add(resultMap);
+            }
+
+            logger.debug("Found {} similar vectors", searchResults.size());
+            return searchResults;
         } catch (Exception e) {
             logger.error("Failed to search vectors: {}", e.getMessage());
             return Collections.emptyList();
@@ -209,12 +232,16 @@ public class MilvusService {
 
     public void dropCollection() {
         try {
-            DropCollectionReq dropCollectionReq = DropCollectionReq.builder()
-                    .collectionName(milvusConfig.getCollectionName())
+            DropCollectionParam dropCollectionParam = DropCollectionParam.newBuilder()
+                    .withCollectionName(milvusConfig.getCollectionName())
                     .build();
 
-            milvusClient.dropCollection(dropCollectionReq);
-            logger.info("Dropped collection: {}", milvusConfig.getCollectionName());
+            R<RpcStatus> response = milvusClient.dropCollection(dropCollectionParam);
+            if (response.getStatus() == R.Status.Success.getCode()) {
+                logger.info("Dropped collection: {}", milvusConfig.getCollectionName());
+            } else {
+                logger.error("Failed to drop collection: {}", response.getMessage());
+            }
         } catch (Exception e) {
             logger.error("Failed to drop collection: {}", e.getMessage());
         }
